[gd_scene load_steps=7 format=3 uid="uid://drasq2nfn6vs5"]

[ext_resource type="Script" path="res://Player/player_character.gd" id="1_fgemk"]
[ext_resource type="Script" path="res://Player/object_placer.gd" id="2_ob7jd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dvg6s"]
radius = 0.4
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_j5drd"]
radius = 0.4
height = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_7p6nu"]
top_radius = 0.3
bottom_radius = 0.3
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3wfcu"]

[node name="PlayerCharacter" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 9
script = ExtResource("1_fgemk")

[node name="ObjectPlacer" type="Node3D" parent="."]
script = ExtResource("2_ob7jd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_dvg6s")

[node name="RotationHelper" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="RotationHelper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CapsuleMesh_j5drd")
skeleton = NodePath("../..")

[node name="visor" type="MeshInstance3D" parent="RotationHelper/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00326657, 0.309535, -0.201772)
mesh = SubResource("CylinderMesh_7p6nu")
surface_material_override/0 = SubResource("StandardMaterial3D_3wfcu")

[node name="PlacementRaycast" type="RayCast3D" parent="RotationHelper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.582371, -0.894689)

[node name="CameraOrigin" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.745248, 0)

[node name="CameraHelper" type="Node3D" parent="CameraOrigin"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraOrigin/CameraHelper"]
spring_length = 2.0
margin = 0.05

[node name="PlayerCamera" type="Camera3D" parent="CameraOrigin/CameraHelper/SpringArm3D"]
